# complish-dev

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  diesel.toml  mise.toml  rust-toolchain.toml  rustfmt.toml
crates/cli/: Cargo.toml  README.md  complish.usage.kdl
crates/cli/src/: main.rs
crates/cli/src/app/: mod.rs
crates/cli/src/app/commands/: mod.rs  version.rs
crates/cli/src/app/commands/task/: mod.rs
crates/cli/src/app/commands/task/commands/: create.rs  list.rs  mod.rs
crates/cli/src/ui/: alert.rs  color.rs  mod.rs  task_detail.rs  task_table.rs  text.rs
crates/cli/src/value_parser/: mod.rs  naive_datetime.rs  task_estimation.rs
crates/complish/: Cargo.toml  README.md
crates/complish-cli/: Cargo.toml  README.md  build.rs
crates/complish-cli/src/: app.rs  bootstrapper.rs  main.rs
crates/complish-cli/src/commands/: mod.rs  version.rs
crates/complish/src/: lib.rs  path.rs
crates/complish/src/config/: default_path.rs  diagnostic.rs  env.rs  loader.rs  mod.rs  path.rs
crates/complish/src/config/settings/: core.rs  mod.rs  root.rs
crates/complish/src/db/: migrations.rs  mod.rs  repo.rs
crates/complish/src/db/migrations/: 0002_create_tags.sql  0003_create_projects.sql  0004_create_project_updates.sql  0006_create_tasks.sql  0007_create_task_notes.sql  0008_create_task_work_logs.sql  0009_create_task_relationships.sql  0012_create_sprints.sql  0013_create_sprint_tasks.sql
crates/complish/src/diagnostic/: mod.rs  result.rs  set.rs  severity.rs
crates/complish/src/entities/: journal_entry.rs  mod.rs  rgb.rs  tag.rs
crates/complish/src/entities/project/: mod.rs  resolution.rs  update.rs  update_status.rs
crates/complish/src/entities/task/: estimation.rs  mod.rs  note.rs  priority.rs  relationship.rs  relationship_type.rs  resolution.rs  work_log.rs  workflow_status.rs
crates/complish/src/env/: complish_home_result.rs  mod.rs  value.rs  var.rs
crates/complish/src/journal/: entry.rs  mod.rs
crates/complish/src/journal/repo/: mod.rs  mutation.rs  query.rs
crates/complish/src/list/: mod.rs  name.rs  repo.rs
crates/complish/src/macros/: impl_repo_constructor.rs  impl_sql_string_traits.rs  mod.rs
crates/complish/src/project/: entity.rs  mod.rs  update.rs  update_status.rs  workflow_status.rs
crates/complish/src/project/repo/: hydration.rs  query.rs
crates/complish/src/project/repo/mutation/: mod.rs  persistence.rs  tags.rs  updates.rs  workflow.rs
crates/complish/src/repositories/: mod.rs  tag_repository.rs
crates/complish/src/sprint/: entity.rs  mod.rs
crates/complish/src/store/: migrations.rs
crates/complish/src/store/migrations/: 0002_create_tags.sql  0003_create_projects.sql  0004_create_project_tags.sql  0005_create_tasks.sql  0006_create_task_tags.sql  0007_create_task_relationships.sql  0008_create_journal_entries.sql
crates/complish/src/tag/: entity.rs  mod.rs
crates/complish/src/tag/repo/: mod.rs  mutation.rs  query.rs
crates/complish/src/task/: creator.rs  entity.rs  mod.rs  note.rs  priority.rs  repo.rs  status.rs  work_log.rs
crates/complish/src/task/relationship/: entity.rs  kind.rs  mod.rs
crates/complish/src/task/repo/: constructor.rs  hydration.rs  mod.rs  query.rs
crates/complish/src/task/repo/mutation/: mod.rs  persistence.rs  work_log.rs  workflow.rs
crates/complish/src/types/: env_result.rs  json_vec.rs  mod.rs
crates/complish/src/vault/: migrations.rs  repo.rs
crates/complish/src/vault/migrations/: 002_create_lists.sql  003_create_tasks.sql
crates/core/: Cargo.toml  README.md
crates/core/migrations/2025-10-01-000000_create_tags/: down.sql
crates/core/migrations/2025-10-01-000001_create_tags/: up.sql
crates/core/migrations/2025-10-01-000002_create_tasks/: down.sql  up.sql
crates/core/migrations/2025-10-01-000003_create_lists/: down.sql  up.sql
crates/core/migrations/2025-10-01-000004_create_projects/: down.sql  up.sql
crates/core/migrations/2025-10-01-000005_create_journal_entries/: down.sql  up.sql
crates/core/migrations/2025-10-01-000005_create_sprints/: up.sql
crates/core/migrations/2025-10-01-000006_create_sprints/: down.sql
crates/core/src/: env.rs  lib.rs  store.rs
crates/core/src/env/: constants.rs  mod.rs  resolvers.rs  value.rs  var.rs
crates/core/src/macros/: impl_string_sql_traits.rs  mod.rs  with_test_connection.rs
crates/core/src/models/: mod.rs  schema.rs
crates/core/src/models/journal/: entities.rs  mod.rs
crates/core/src/models/journal/repo/mutation/: persistence.rs
crates/core/src/models/journal/repo/query/: collection.rs  find.rs
crates/core/src/models/list/: mod.rs
crates/core/src/models/list/entities/: list.rs  mod.rs  related_task.rs
crates/core/src/models/list/repo/: mod.rs
crates/core/src/models/list/repo/mutation/: mod.rs  persistence.rs  task.rs
crates/core/src/models/list/repo/query/: association.rs  collection.rs  find.rs  mod.rs
crates/core/src/models/project/: mod.rs
crates/core/src/models/project/entities/: mod.rs  project.rs  related_task.rs  update.rs
crates/core/src/models/project/repo/: mod.rs
crates/core/src/models/project/repo/mutation/: mod.rs  persistence.rs  task.rs  update.rs  workflow.rs
crates/core/src/models/project/repo/query/: association.rs  collection.rs  find.rs
crates/core/src/models/project/types/: mod.rs  resolution.rs  update_status.rs  workflow_status.rs
crates/core/src/models/sprint/: mod.rs
crates/core/src/models/sprint/entities/: mod.rs  related_task.rs  sprint.rs
crates/core/src/models/sprint/repo/mutation/: persistence.rs  task.rs
crates/core/src/models/sprint/repo/query/: association.rs  collection.rs  find.rs
crates/core/src/models/tag/: entities.rs  mod.rs
crates/core/src/models/task/: mod.rs
crates/core/src/models/task/entities/: mod.rs  note.rs  related_tag.rs  relationship.rs  task.rs  work_log.rs
crates/core/src/models/task/types/: estimation.rs  mod.rs  priority.rs  relationship_kind.rs  resolution.rs  workflow_status.rs
crates/core/src/store/: migration.rs  mod.rs  path.rs  pool.rs
crates/core/src/types/: json_vec.rs  metadata.rs  mod.rs
(+85 files in other folders)
