[package]
name = "complish"
version = "0.0.1"
edition = "2024"
description = "A personal productivity tool"
authors = ["Aaron Allen (@aaronmallen)"]
repository = "https://github.com/complish-task/cli"
homepage = "https://github.com/complish-task/cli"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dir_spec = "0.2"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = 1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

implicit_return = "allow"
large-enum-variant = "warn"
missing_docs_in_private_items = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "deny"
must-use-candidate = "allow"
needless-pass-by-value = "warn"
question_mark_used = "allow"
redundant-clone = "warn"
return-self-not-must-use = "warn"
single-match-else = "allow"
too-many-lines = "allow"
trivially-copy-pass-by-ref = "warn"
upper-case-acronyms = "allow"

[lints.rust]
dead_code = "allow"
unsafe_code = "forbid"
unused_imports = "allow"
unused_variables = "allow"
