[workspace]
resolver = "2"
members = ["crates/complish", "crates/complish-cli"]

[workspace.metadata.workspaces]
allow_branch = "main"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6"
log = "0.4"
pretty_assertions = "1.4"
temp-dir = "0.1"
temp-env = "0.3"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = 1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

implicit_return = "allow"
large-enum-variant = "warn"
missing_docs_in_private_items = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "deny"
must-use-candidate = "allow"
needless-pass-by-value = "warn"
question_mark_used = "allow"
redundant-clone = "warn"
return-self-not-must-use = "warn"
single-match-else = "allow"
too-many-lines = "allow"
trivially-copy-pass-by-ref = "warn"
upper-case-acronyms = "allow"

[workspace.lints.rust]
dead_code = "warn"
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"
