[package]
authors = ["Aaron Allen <hello@aaronmallen.me>"]
edition = "2024"
name = "complish"
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
cuid2 = "0.1"
diesel = { version = "2.3", features = [
  "chrono",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
diesel_migrations = "2.3"
dir_spec = "0.5"
getset = "0.1"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
