[package]
authors = ["Aaron Allen (@aaronmallen)"]
categories = ["command-line-utilities", "development-tools"]
description = "Personal productivity CLI for accomplishment tracking, task management, and performance reporting"
edition = "2024"
keywords = [
  "git-integration",
  "journaling",
  "productivity",
  "reporting",
  "task-management",
]
homepage = "https://github.com/aaronmallen/complish-dev"
license = "MIT"
name = "complish-cli"
readme = "README.md"
repository = "https://github.com/aaronmallen/complish-dev"
version = "0.1.0"

[package.metadata.workspaces]
independent = true

[[bin]]
name = "complish"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = "0.6"
complish = { path = "../core", features = ["cli"] }
crossterm = "0.29"
yansi = { version = "1.0", features = ["detect-env", "detect-tty"] }

[build-dependencies]
chrono = { workspace = true }
