[package]
name = "complish-cli"
version = "0.1.0"
edition = "2024"
description = "command-line task manager with today/next/someday organization"
authors = ["Aaron Allen (@aaronmallen)"]
repository = "https://github.com/aaronmallen/complish-dev"
homepage = "https://github.com/aaronmallen/complish-dev"
license = "MIT"
readme = "README.md"

[package.metadata.workspaces]
independent = true

[[bin]]
name = "complish"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
complish = { path = "../complish", version = "0.1" }
eyre = { workspace = true }
yansi = { version = "1.0", features = ["detect-env", "detect-tty"] }

[lints]
workspace = true
