[package]
name = "complish"
version = "0.1.0"
edition = "2024"
description = "Core library for project-aware task management with git integration"
authors = ["Aaron Allen (@aaronmallen)"]
repository = "https://github.com/aaronmallen/complish-dev"
homepage = "https://github.com/aaronmallen/complish-dev"
license = "MIT"
readme = "README.md"

[package.metadata.workspaces]
independent = true

[dependencies]
dir_spec = "0.5"
eyre = "0.6"
getset = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
pretty_assertions = "1.4"
temp-env = "0.3"
tempfile = "3.21"
