[package]
authors = ["Aaron Allen <hello@aaronmallen.me>"]
description = "Core business logic for personal productivity with accomplishment recall"
documentation = "https://docs.rs/complish"
edition = "2024"
homepage = "https://github.com/aaronmallen/complish-dev"
keywords = ["management", "organization", "productivity", "tasks", "todo"]
license = "MIT"
name = "complish"
readme = "README.md"
repository = "https://github.com/aaronmallen/complish-dev.git"
version = "0.1.0"

[dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

[dependencies.diesel]
version = "2.2"
features = ["returning_clauses_for_sqlite_3_35", "sqlite"]
